fixed overflow issue on mobile client access page

--- a/sass/theme/_client-login.scss
+++ b/sass/theme/_client-login.scss
@@ -65,8 +65,10 @@
   }
 
   .links-columns {
-    margin-right: -($grid-gutter-width);
-    margin-left: -($grid-gutter-width);
+    @include media-breakpoint-up(md) {
+      margin-right: -($grid-gutter-width);
+      margin-left: -($grid-gutter-width);
+    } 
 
     .col-md-6 {
       padding-top: $grid-gutter-width;
@@ -75,12 +77,13 @@
       flex-direction: column;
       align-items: flex-start;
       justify-content: space-between;
-      padding-right: $grid-gutter-width;
-      padding-left: $grid-gutter-width;
 
       @include media-breakpoint-up(md) {
         padding-top: $grid-gutter-width * 2;
         padding-bottom: $grid-gutter-width * 2;
+        padding-right: $grid-gutter-width;
+        padding-left: $grid-gutter-width;
+
       }
 
       &:last-child {
